--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-/* Sélecteur universel */
+/* Wildcard, Fonts */
 
 * {
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
 }
-
-/* Polices */
 
 @font-face {
     font-family: 'Raleway';
@@ -12,6 +11,35 @@
     src: url('../Fonts/Raleway-VariableFont_wght.ttf');
 }
 
-h1, h2, h3, p {
-    font-family: Raleway;
+/* Header */
+
+nav {
+    border: 1px solid red;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100px;
+    margin-top: 40px;
+}
+
+nav a {
+    color: inherit;
+    text-decoration: none;
+    margin-right: 100px;
+    padding: 77px 20px 0 0;
+    border: 1px solid green;
+}
+
+nav a:hover {
+    color: #0065FC;
+    border-top: 3px solid #0065FC;
+}
+
+#logo {
+    border: 1px solid blue;
+    height: 60px;
+    width: 160px;
+    margin-right: auto;
+    padding-left: 50px;
 }
