--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Wildcard, Fonts */
+/* General */
 
 * {
     box-sizing: border-box;
@@ -11,35 +11,114 @@
     src: url('../Fonts/Raleway-VariableFont_wght.ttf');
 }
 
+#page_block {
+    display: flex;
+    flex-direction: column;
+    max-width: 992px;
+    margin: auto;
+}
+
+body {
+    background-color: #F2F2F2;
+}
+
 /* Header */
 
 nav {
-    border: 1px solid red;
+    border:  1px solid blue;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     height: 100px;
-    margin-top: 40px;
 }
 
-nav a {
-    color: inherit;
-    text-decoration: none;
-    margin-right: 100px;
-    padding: 77px 20px 0 0;
+    /* Header - Logo */
+
+#logo {
+    border: 1px solid black;
+    margin-left: 20px;
+    height: 60px;
+    width: 110px;
+}
+
+    /* Header - Barre de navigation */
+
+#nav_container {
+    display: flex;
+}
+
+#hebergements {
+    border: 1px solid blue;
+    width: 150px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#activités {
     border: 1px solid green;
+    width: 150px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-nav a:hover {
-    color: #0065FC;
+#hebergements:hover {
     border-top: 3px solid #0065FC;
 }
 
-#logo {
-    border: 1px solid blue;
-    height: 60px;
-    width: 160px;
-    margin-right: auto;
-    padding-left: 50px;
+#activités:hover {
+    border-top: 3px solid #0065FC;
 }
+
+.a_decoration {
+    list-style-type: none;
+    color: #000000;
+    text-decoration: none;
+}
+
+.a_decoration:hover {
+    color: #0065FC;
+}
+
+    /* Header - Responsive */
+
+@media screen and (max-width: 768px) {
+
+    nav {
+        justify-content: center;
+    }
+
+    #logo {
+        justify-content: center;
+        margin-left: auto;
+    }
+    
+    #nav_container {
+        flex-basis: 100%;
+        justify-content: center;
+    }
+
+    #hebergements {
+        border-bottom: 3px solid lightslategray;
+    }
+
+    #activités {
+        border-bottom: 3px solid lightslategray;
+    }
+
+    #hebergements:hover {
+        border-top: none;
+        border-bottom: 3px solid #0065FC;
+    }
+    
+    #activités:hover {
+        border-top: none;
+        border-bottom: 3px solid #0065FC;
+    }
+}
+
+
