--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 
 body {
     background-color: #FFFFFF;
+    letter-spacing: -0.3px;
 }
 
 /* Header */
@@ -97,17 +98,20 @@ nav {
 
 #section1 {
     border: 1px solid red;
-    height: 200px;
+    height: 300px;
 }
 
 #section1 p {
     border: 1px solid black;
     font-size: 15px;
+    margin-top: 0;
 }
 
-h1 {
+#section1 h1 {
     border: 1px solid black;
     font-size: 19px;
+    font-weight: bolder;
+    margin-bottom: 7px;
 }
 
         /* Search bar */
@@ -116,7 +120,7 @@ h1 {
     display: flex;
 }
 
-#search i {
+#search > i {
     background-color: #F2F2F2;
     padding: 12px 15px;
     margin-left: 0;
@@ -124,7 +128,7 @@ h1 {
 }
 
 #search input {
-    padding: 7px 25px;
+    padding: 10px 20px;
     border: 1px solid #F2F2F2;
 }
 
@@ -134,20 +138,119 @@ h1 {
 }
 
 #search button {
-    padding: 0 15px;
+    padding: 0 18px;
     background-color: #0065FC;
     color: #F2F2F2;
     border-radius: 0 13px 13px 0;
     border: none;
     font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    opacity: 0.9;
+    transition: transform 200ms;
 }
 
-#search button a {
-    color: inherit;
-    text-decoration: none;
+#search button:hover {
+    opacity: 1;
+    transform: scale(1.02);
 }
 
-    /* Header - Responsive */
+.fas.fa-search {
+    display: none;
+}
+
+        /* Filtres */
+
+#filters {
+    display: flex;
+    align-items: center;
+    border: 1px solid blue;
+}
+#filters h2 {
+     font-size: 16px;
+}
+
+#list_block {
+     display: flex;
+}
+
+#filters_lists {
+     display: flex;
+     list-style-type: none;
+     padding-left: 20px;
+     flex-wrap: wrap;
+}
+
+#filters_lists li {
+     padding: 0 12px;
+}
+
+#filters_lists button {
+     display: inline-block;
+     height: 39px;
+     min-width: 120px;
+     background-color: #FFFFFF;
+     border: 2px solid rgb(218, 211, 211);
+     border-radius: 20px;
+     cursor: pointer;
+}
+
+#filters_lists button:hover{
+     background-color: #DEEBFF;
+     color: #0065FC;
+     transform: scale(1.025);
+     transition: all 200ms;
+}
+
+.icon_design {
+     color: #0065FC;
+     background-color: #DEEBFF;
+     border-radius: 50%;
+     padding: 10px;
+     position: relative;
+     right: 10px;
+     top: 0.5px;
+}
+
+.icon_design i {
+     min-width: 20px;
+     min-height: 16px;
+}
+
+.filter_text {
+     font-weight: bold;
+}
+
+        /* Résultats de recherche */
+
+#information {
+    margin: 10px 0;
+    display: flex;
+}
+
+#information p {
+    width: 75%;
+    text-align: justify;
+    margin-top: 6px;
+    font-size: 15px;
+}
+
+#info_text {
+     margin-left: 5px;
+}
+
+.fas.fa-info {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0065FC;
+    border: 1px solid #c7c5c5;
+    border-radius: 50%;
+}
+
+    /* Responsive - Header */
 
 @media screen and (max-width: 768px) {
 
@@ -187,6 +290,59 @@ h1 {
         border-top: none;
         border-bottom: 3px solid #0065FC;
     }
+
+    /* Responsive - Section 1 */
+
+    #section1 {
+        border: 1px solid red;
+        height: 200px;
+        text-align: center;
+    }
+
+    #section1 h1 {
+        border: 1px solid black;
+        font-size: 22px;
+        font-weight: bolder;
+        margin-bottom: 7px;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    #search span {
+        display: none;
+    }
+
+    .fas.fa-search {
+        display: inherit;
+        color: #FFFFFF 
+    }
+
+    #search {
+        justify-content: center;
+    }
+
+    #search button {
+        border-radius: 13px;
+    }
+
+    /* Responsive - Liste */
+
+    #bloc1 {
+        align-self: flex-start;
+        margin-left: 35px;
+    }
+
+    #filters {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    #filters_lists {
+        margin: 0;
+    }
+
+    #filters_lists button {
+        margin-bottom: 11px;
+    }
+
 }
-
-
