--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     font-family: 'Raleway', sans-serif;
 }
 
+img {
+    object-fit: cover;
+}
+
 @font-face {
     font-family: 'Raleway';
     src: url('../Fonts/Raleway-Italic-VariableFont_wght.ttf');
@@ -98,7 +102,7 @@ nav {
 
 #section1 {
     border: 1px solid red;
-    height: 260px;
+    min-height: 260px;
 }
 
 #section1 p {
@@ -259,37 +263,41 @@ nav {
 
 #section2 {
     display: flex;
-    height: 500px;
+    flex-wrap: wrap;
+    min-height: 520px;
     border: 1px solid teal;
 }
+        /* Hébergements */
 
 #hebergements_results {
     border: 1px solid green;
-    margin-right: 40px;
+    margin-right: 30px;
     background-color: #F2F2F2;
+    border-radius: 20px;
     flex: 1;
 }
 
 #bloc2 {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
 #bloc3 {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
-#populaires_results {
-    border: 1px solid coral;
-    background-color: #F2F2F2;
+#bloc4 p {
+    margin: 10px 30px;
+    font-weight: bolder;
+    font-size: 14px;
 }
 
 .h2_results {
     font-size: 17px;
-    margin: 30px 25px;
+    margin: 30px 0 30px 15px;
     border: 1px solid;
 }
 
@@ -297,13 +305,14 @@ nav {
     border: 1px solid black;
     background-color: white;
     border-radius: 20px;
-    min-width: 210px;
+    width: 200px;
+    height: 170px;
     margin-bottom: 20px;
 }
 
 .hebergements_pictures {
     width: 100%;
-    height: 120px;
+    height: 100px;
     padding: 5px;
     border-radius: 20px 20px 0 0;
 }
@@ -334,6 +343,42 @@ nav {
 
 .stars_gray {
     color: #c7c5c5;
+}
+
+        /* Hébergements populaires */
+
+#populaires_results {
+display: flex;
+flex-direction: column;
+border: 1px solid coral;
+background-color: #F2F2F2;
+border-radius: 20px;
+}
+
+.populaires_description {
+    display: flex;
+    border: 1px solid black;
+    background-color: white;
+    padding: 3px;
+    border-radius: 20px;
+    margin: 0 10px 20px 10px;
+    width: 240px;
+}
+
+#logo_flèche {
+    margin-left: 60px;
+}
+
+.populaires_pictures {
+    height: 110px;
+    width: 90px;
+    border-radius: 20px 0 0 20px;
+}
+
+.description_column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
     /* Responsive - Header */
@@ -381,7 +426,7 @@ nav {
 
     #section1 {
         border: 1px solid red;
-        height: 200px;
+        height: fit-content;
         text-align: center;
     }
 
@@ -431,4 +476,77 @@ nav {
         margin-bottom: 11px;
     }
 
+    /* Responsive - Section 2 */
+
+    #section2{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #hebergements_results {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        order: 1;
+        width: 100%;
+        margin-right: 0;
+        background-color: white;
+        border-radius: 0;
+    }
+
+    .hebergements_description {
+        width: 320px;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hebergements_pictures {
+        height: 62%;
+        width: 100%;
+    }
+
+    #populaires_results {
+        order: 0;
+        width: 100%;
+        align-items: center;
+        border: none;
+        border-radius: 0;
+    }
+
+    #bloc1{
+        margin: 0;
+    }
+
+    .h2_results {
+        margin: 30px 0 20px 10px;
+        align-self: flex-start;
+    }
+
+    #logo_flèche {
+        margin-left: 168px;
+    }
+
+    #bloc2, #bloc3 {
+        flex-direction: column;
+    }
+
+    #bloc4 {
+        align-self: flex-start;
+    }
+
+    .populaires_pictures {
+        height: 100%;
+        width: 110px;
+        border-radius: 20px 0 0 20px;
+    }
+
+    .populaires_description {
+        margin: 0 10px 20px 10px;
+        width: 320px;
+        height: 120px;
+    }
+
 }
+
+
