ajustement du padding du logo en responsive

--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ border-radius: 20px;
 
     #logo {
         justify-content: center;
-        margin-left: auto;
+        margin: 20px 0;
     }
     
     #nav_container {
