--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ img {
 
 @font-face {
     font-family: 'Raleway';
-    src: url('../Fonts/Raleway-Italic-VariableFont_wght.ttf');
-    src: url('../Fonts/Raleway-VariableFont_wght.ttf');
+    src: url('../Fonts/Raleway-Italic-VariableFont_wght.ttf'), 
+         url('../Fonts/Raleway-VariableFont_wght.ttf');
 }
 
 #page_block {
@@ -25,6 +25,11 @@ img {
 body {
     background-color: #FFFFFF;
     letter-spacing: -0.3px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 /* Header */
@@ -266,6 +271,7 @@ nav {
     flex-wrap: wrap;
     min-height: 520px;
     border: 1px solid teal;
+    margin-bottom: 15px;
 }
         /* Hébergements */
 
@@ -290,24 +296,25 @@ nav {
 }
 
 #bloc4 p {
-    margin: 10px 30px;
+    margin: 10px 40px;
     font-weight: bolder;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .h2_results {
-    font-size: 17px;
-    margin: 30px 0 30px 15px;
+    font-size: 18px;
+    margin: 25px 0 25px 15px;
     border: 1px solid;
 }
 
 .hebergements_description {
-    border: 1px solid black;
     background-color: white;
     border-radius: 20px;
     width: 200px;
     height: 170px;
     margin-bottom: 20px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
+    cursor: pointer;
 }
 
 .hebergements_pictures {
@@ -318,14 +325,14 @@ nav {
 }
 
 .h3_results {
-    margin: 5px 13px;
+    margin: 0 13px 5px 10px;
     font-size: 14px;
     font-weight: bold;
 }
 
 .p_results {
-    margin: 5px 13px;
-    font-size: 13px;
+    margin: 5px 10px;
+    font-size: 12.9px;
 }
 
 .price_bold {
@@ -333,7 +340,7 @@ nav {
 }
 
 .stars_results {
-    margin: 5px 13px 7px 13px;
+    margin: 5px 13px 0px 10px;
     font-size: 11px;
 }
 
@@ -345,33 +352,62 @@ nav {
     color: #c7c5c5;
 }
 
+.hebergements_description:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+}
+
         /* Hébergements populaires */
 
 #populaires_results {
-display: flex;
-flex-direction: column;
-border: 1px solid coral;
-background-color: #F2F2F2;
-border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid coral;
+    background-color: #F2F2F2;
+    border-radius: 20px;
 }
 
 .populaires_description {
     display: flex;
-    border: 1px solid black;
     background-color: white;
-    padding: 3px;
     border-radius: 20px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
     margin: 0 10px 20px 10px;
     width: 240px;
+    height: 122px;
+    cursor: pointer;
+}
+
+.populaires_description:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+}
+
+#bloc_titre_flèche {
+    display: flex;
+    justify-content: space-between;
+}
+
+#bloc_titre {
+    align-self: flex-start;
+}
+
+#bloc_flèche {
+    margin-right: 10px;
+    margin: 30px 10px 25px 0;
+    height: 22px;
 }
 
 #logo_flèche {
-    margin-left: 60px;
+    border: 1px solid red;
+    position: relative;
+    top: 2px;
 }
 
 .populaires_pictures {
-    height: 110px;
+    height: 100%;
     width: 90px;
+    padding: 5px;
     border-radius: 20px 0 0 20px;
 }
 
@@ -379,6 +415,178 @@ border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+/* Section 3 */
+
+#section3 {
+    height: auto;
+    border: 1px solid red;
+}
+
+#section3 img {
+    filter: brightness(105%);
+}
+
+    /* Activités à Marseille */
+
+.h2_activités {
+    font-size: 18px;
+    margin: 25px 0 15px 0;
+    border: 1px solid;
+}
+
+#activités_marseille_container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+}
+
+#vieux_port {
+    border: 1px solid;
+    border-radius: 20px;
+    width: 240px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
+}
+
+#vieux_port:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+    cursor: pointer;
+}
+
+#img_vieux_port {
+    width: 100%;
+    height: 310px;
+    border-radius: 20px 20px 0 0;
+    padding: 5px;
+}
+
+#pomègues_frioul {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid;
+    width: 240px;
+}
+
+#pomègues {
+    height: 175px;
+    border: 1px solid green;
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
+    margin-bottom: 20px;
+}
+
+#pomègues:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+    cursor: pointer;
+}
+
+#img_pomègues {
+    width: 100%;
+    height: 135px;
+    padding: 5px;
+    border-radius: 20px 20px 0 0;
+}
+
+#frioul {
+    height: 155px;
+    border: 1px solid orangered;
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
+}
+
+#frioul:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+    cursor: pointer;
+}
+
+#img_frioul {
+    width: 100%;
+    height: 115px;
+    padding: 5px;
+    border-radius: 20px 20px 0 0;
+}
+
+#calanques {
+    border: 1px solid black;
+    width: 240px;
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
+}
+
+#calanques:hover{
+    transform: scale(1.02);
+    transition: 200ms;
+    cursor: pointer;
+}
+
+#img_calanques {
+    width: 100%;
+    height: 310px;
+    border-radius: 20px 20px 0 0;
+    padding: 5px;
+}
+
+#garde_longchamp {
+    border: 1px solid;
+    width: 240px;
+}
+
+#garde {
+    height: 165px;
+    border: 1px solid slateblue;
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
+    margin-bottom: 20px;
+}
+
+#garde:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+    cursor: pointer;
+}
+
+#img_garde {
+    padding: 5px;
+    width: 100%;
+    height: 125px;
+    border-radius: 20px 20px 0 0;
+}
+
+#longchamp {
+    height: 165px;
+    border: 1px solid royalblue;
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px rgb(224, 224, 224);
+}
+
+#longchamp:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+    cursor: pointer;
+}
+
+#img_longchamp {
+    padding: 5px;
+    height: 125px;
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+}
+
+.h3_activités {
+    font-size: 13.5px;
+    font-weight: bold;
+    margin-left: 15px;
+    margin-top: 5px;
+}
+
+.activités_lieu {
+    width: 228px;
+    height: 16px;
 }
 
     /* Responsive - Header */
@@ -535,10 +743,6 @@ border-radius: 20px;
         align-self: flex-start;
     }
 
-    #logo_flèche {
-        margin-left: 168px;
-    }
-
     #bloc2, #bloc3 {
         flex-direction: column;
     }
@@ -557,6 +761,98 @@ border-radius: 20px;
         margin: 0 10px 20px 10px;
         width: 320px;
         height: 120px;
+    }
+
+    .description_column {
+        width: 50%;
+    }
+
+    #bloc_titre_flèche {
+        width: 100%;
+    }
+    
+    #bloc_flèche {
+        margin-right: 10px;
+        margin: 30px 10px 25px 0;
+        height: 22px;
+    }
+
+    /* Responsive - Section 3 */
+
+    #activités_marseille_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #vieux_port {
+        width: 320px;
+        height: 200px;
+    }
+
+    #img_vieux_port {
+        width: 100%;
+        height: 160px;
+    }
+
+    #pomègues_frioul {
+        width: 320px;
+        height: 420px;
+    }
+
+    #pomègues {
+        width: 320px;
+        height: 200px;
+    }
+
+    #img_pomègues {
+        width: 100%;
+        height: 160px;
+    }
+
+    #frioul {
+        width: 320px;
+        height: 200px;
+    }
+
+    #img_frioul {
+        width: 100%;
+        height: 160px;
+    }
+
+    #calanques {
+        width: 320px;
+        height: 200px;
+    }
+
+    #img_calanques {
+        width: 100%;
+        height: 160px;
+    }
+
+    #garde_longchamp {
+        width: 320px;
+        height: 420px;
+    }
+
+    #garde {
+        width: 320px;
+        height: 200px;
+    }
+
+    #img_garde {
+        width: 100%;
+        height: 160px;
+    }
+
+    #longchamp {
+        width: 320px;
+        height: 200px;
+    }
+
+    #img_longchamp {
+        width: 100%;
+        height: 160px;
     }
 
 }
