--- a/css/style.css
+++ b/css/style.css
@@ -317,13 +317,13 @@ nav {
     border-radius: 20px 20px 0 0;
 }
 
-.h3_results {
+.hébergements_h3 {
     margin: 0 13px 5px 10px;
     font-size: 15px;
     font-weight: bold;
 }
 
-.p_results {
+.hébergements_p {
     margin: 5px 10px;
     font-size: 14px;
 }
@@ -380,7 +380,7 @@ nav {
     box-shadow: 4px 4px 6px rgb(224, 224, 224);
     width: 100%;
     margin-bottom: 8%;
-    height: 150px;
+    height: 100%;
     cursor: pointer;
 }
 
@@ -424,10 +424,20 @@ nav {
 .description_column {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     border: 1px solid skyblue;
     width: 60%;
     height: 100%;
+}
+
+.populaires_h3 {
+    margin: 15px 13px 10px 10px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.populaires_p {
+    margin: 0 0 45px 10px;
+    font-size: 14px;
 }
 
 /* Section 3 - Activités à Marseille */
